<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Blue Exchange</string>
    <string name="facebook_app_id">330181533849435</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Misc-->
    <string name="browse_label">Browse</string>

    <string name="blue_review">Blue Reviews</string>
    <string name="read_label">Read Reviews</string>
    <string name="avg_label">Course Rating: </string>
    <string name="write_review_label">Write a Review!</string>
    <string name="review_hint">Write a review of the course here. Tell us what you thought about it!</string>
    <string name="submit_label">Submit</string>
    <string name="anon_label">Anonymous</string>

    <!-- Dialog text values-->
    <string name="seller">Seller: </string>
    <string name="title">Title: </string>
    <string name="version">Version: </string>
    <string name="course">Class: </string>
    <string name="price">Price: </string>
    <string name="condition">Condition: </string>

    <!-- Actions -->
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="email">Email</string>

    <string name="info">Blue Exchange is in its early stage of launch and is still under construction. Having problems? Have a suggestion? Email me at ishbaid@umich.edu and I\'ll be sure to use your feedback to improve Blue Exchange. \n\n Thanks!</string>

</resources>
