<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baid.mxchange.m_xchange.ReadReviewFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/review_course_name"
        android:text="@string/course"
        android:textSize="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/review_avg"
            android:text="@string/avg_label"
            android:textSize="18dp"
            android:layout_gravity="left"
            android:paddingLeft="10dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/write_label"
            android:text="@string/write_review_label"
            android:textSize="18dp"
            android:textColor="#00274c"
            android:paddingRight="10dp"
            />


        </LinearLayout>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/review_list"
        android:layout_marginTop="20dp"
        />
</LinearLayout>
