<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.baid.mxchange.m_xchange.WriteReviewFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#244361"
                android:gravity="center"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/review_write_title"
                android:text="@string/course"
                android:textColor="@android:color/white"
                android:textSize="36dp"

                />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rating:"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/write_rating"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Workload:"
                android:textSize="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/workload_spinner"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Professor: "
                android:textSize="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/professor_edit"
                android:hint="Ex: Professor Smith"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:text="Review: "/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:id="@+id/write_review"
                android:layout_gravity="center_horizontal"
                android:hint="@string/review_hint"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anon_label"
                android:id="@+id/anon"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_label"
                android:id="@+id/write_submit"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:background="@drawable/round_button"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
